--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build-css": "tailwindcss build src/styles.css -o public/styles.css",
+    "build-css": "tailwindcss -i ./src/styles.css -o ./dist/output.css --watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,5 +39,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "description": "After pulling down this repo, make sure to also pull down the API repo. Once in the API directory, type: json-server -p 8088 database.json -w",
+  "main": "Notes.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
