--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "logodbz.jpg",
+      "src": "map-icon.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon/jpg"
+      "type": "image/x-icon/png"
     },
     {
-      "src": "logodbz.jpg",
+      "src": "map-icon.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logodbz.jpg",
+      "src": "map-icon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
